[gd_scene load_steps=6 format=3 uid="uid://dxqm8yvwknfc"]

[ext_resource type="Script" path="res://scripts/ui/TranslationDisplay.gd" id="1_translation"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_symbol_panel"]
bg_color = Color(0.956863, 0.909804, 0.847059, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.227451, 0.145098, 0.0941176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input_normal"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.352941, 0.290196, 0.227451, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input_focus"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.203922, 0.596078, 0.858824, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_submit_button"]
bg_color = Color(0.176471, 0.313726, 0.0862745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.188235, 0.0352941, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="TranslationDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 690.0
script = ExtResource("1_translation")

[node name="CustomerNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 100.0
offset_right = 1050.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0.227451, 0.145098, 0.0941176, 1)
theme_override_font_sizes/font_size = 24
text = "Translating for: Customer Name"
horizontal_alignment = 1
visible = false

[node name="SymbolTextDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 150.0
offset_right = 1050.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_symbol_panel")

[node name="SymbolLabel" type="Label" parent="SymbolTextDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.0
offset_top = -54.0
offset_right = 510.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.164706, 0.121569, 0.101961, 1)
theme_override_font_sizes/font_size = 72
text = "*Select a customer to begin...*"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InputField" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 360.0
offset_right = 900.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_placeholder_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_input_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_input_focus")
placeholder_text = "Type your translation here..."
alignment = 1
max_length = 50
caret_blink = true

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 450.0
offset_right = 660.0
offset_bottom = 510.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_submit_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_submit_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_submit_button")
text = "Submit Translation"

[connection signal="text_submitted" from="InputField" to="." method="_on_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_pressed"]
